@@ -1983,7 +1983,7 @@ SILC_SERVER_CMD_FUNC(join)
 	 the channel by ourselves. */
       if (server->standalone) {
 	channel = silc_server_create_new_channel(server, server->id, cipher, 
-						 channel_name);
+						 channel_name, TRUE);
 	umode = (SILC_CHANNEL_UMODE_CHANOP | SILC_CHANNEL_UMODE_CHANFO);
 	created = TRUE;
 
@@ -2022,7 +2022,7 @@ SILC_SERVER_CMD_FUNC(join)
 	if (!channel) {
 	  /* Channel really does not exist, create it */
 	  channel = silc_server_create_new_channel(server, server->id, cipher, 
-						   channel_name);
+						   channel_name, TRUE);
 	  umode = (SILC_CHANNEL_UMODE_CHANOP | SILC_CHANNEL_UMODE_CHANFO);
 	  created = TRUE;
 	}
@@ -2046,7 +2046,7 @@ SILC_SERVER_CMD_FUNC(join)
       if (!channel) {
 	/* Channel really does not exist, create it */
 	channel = silc_server_create_new_channel(server, server->id, cipher, 
-						 channel_name);
+						 channel_name, TRUE);
 	umode = (SILC_CHANNEL_UMODE_CHANOP | SILC_CHANNEL_UMODE_CHANFO);
 	created = TRUE;
       }
